# ltd-insurance-claim-prediction

./: README.md  baseline_model.ipynb  best_model.ipynb  eda.ipynb  evidently_monitoring.py  pyproject.toml  requirements.txt  shap.ipynb  streamlit_app.py  streamlit_update.py
data/: shap_training_sample.parquet  synthetic_ltd_claims_soa_expanded.xlsx
model/: ltd_baseline_model_pipeline.pkl  ltd_best_model_pipeline.pkl
reports/: 01_input_data_drift.html  02_output_drift.html  04_data_quality.html
